--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "npm-check-updates": "^16.14.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-highlight": "^0.15.0",
     "react-router-dom": "^6.21.3",
+    "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.70.0"
   },
   "devDependencies": {
