--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "jszip": "^3.10.1",
     "npm-check-updates": "^16.14.13",
     "react": "^18.2.0",
