--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
-    "react-syntax-highlighter": "^15.5.0",
+    "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
     "sass": "^1.70.0"
   },
   "devDependencies": {
