--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "netlify-plugin-inline-functions-env": "^1.0.9",
     "postcss": "^8.4.35",
     "vite": "^5.0.12"
   }
