--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "react-syntax-highlighter": "npm:@fengkx/react-syntax-highlighter@15.6.1",
-    "sass": "^1.70.0",
-    "vite-plugin-pwa": "^0.19.0"
+    "sass": "^1.70.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.48",
