shorting description for manifest.json

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "registerType": "prompt",
   "name": "Hooks time",
   "short_name": "Hooks time",
-  "description": "Explore a treasure trove of custom React hooks on our website, each accompanied by detailed explanations, live code examples, and input/output demonstrations. Copy and download the code effortlessly, and stay tuned as we regularly add new hooks. Enhance your React projects with our comprehensive collection. Download all hooks as a convenient RAR file for seamless integration.",
+  "description": "Explore custom React hooks with detailed explanations, live code examples, and input/output demonstrations. Download code effortlessly and stay updated with new hooks added regularly.",
   "icons": [
     {
       "src": "/android-chrome-192x192.webp",
